force-app/main/default/objects/MessagingSession/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Reason</label>
    <referenceTo>Case_Reason_Classification__c</referenceTo>
    <relationshipLabel>Messaging Sessions (Case Reason)</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>