force-app/main/default/objects/MessagingSession/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Company Size is used for Omni Channel routing</description>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Micro 0-4</fullName>
            </value>
            <value>
                <fullName>Standard 5-24</fullName>
            </value>
            <value>
                <fullName>Grower 25-49</fullName>
            </value>
            <value>
                <fullName>Grower 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>