force-app/main/default/objects/MessagingSession/fields/Did_IC_Use_Provide_Resources__c.field-meta.xml
<CustomField>
    <fullName>Did_IC_Use_Provide_Resources__c</fullName>
    <label>What Resources did the IC Check?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IKB/HC/Confluence</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Panda/Hippo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>