force-app/main/default/objects/MessagingSession/fields/DIVR_Id__c.field-meta.xml
<CustomField>
    <fullName>DIVR_Id__c</fullName>
    <description>Digital IVR Id from Chat. Either external Id or Salesforce Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DIVR Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>