force-app/main/default/objects/MessagingSession/fields/First_Level__c.field-meta.xml
<CustomField>
    <fullName>First_Level__c</fullName>
    <description>First level of DIVR</description>
    <label>First Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>