force-app/main/default/objects/MessagingSession/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <description>Jira link if there is a CCtaxops Jira for review</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Jira link if there is a CCtaxops Jira for review</inlineHelpText>
    <label>Jira Link</label>
    <type>Url</type>
</CustomField>