force-app/main/default/objects/MessagingSession/fields/ORCA_Predicted_Support_Level_Confidence__c.field-meta.xml
<CustomField>
    <fullName>ORCA_Predicted_Support_Level_Confidence__c</fullName>
    <label>ORCA Predicted Support Level Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>