force-app/main/default/objects/MessagingSession/fields/ORCA_Predicted_Type_Confidence__c.field-meta.xml
<CustomField>
    <fullName>ORCA_Predicted_Type_Confidence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ORCA Predicted Type Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>