force-app/main/default/objects/MessagingSession/fields/PE_Follow_Up_Recommended__c.field-meta.xml
<CustomField>
    <fullName>PE_Follow_Up_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this Case is recommended for PE follow up</description>
    <inlineHelpText>If true, this Case is recommended for PE follow up</inlineHelpText>
    <label>PE Follow Up Recommended</label>
    <type>Checkbox</type>
</CustomField>