force-app/main/default/objects/MessagingSession/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Optional field from the pre-chat form</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provided by the customer in the pre-chat form</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>