force-app/main/default/objects/MessagingSession/fields/Trk_gclid__c.field-meta.xml
<CustomField>
    <fullName>Trk_gclid__c</fullName>
    <description>Created to pass data to Leads from chat.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trk gclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>