force-app/main/default/objects/MessagingSession/fields/Trk_matchtype__c.field-meta.xml
<CustomField>
    <fullName>Trk_matchtype__c</fullName>
    <description>Created to pass data to Leads from chat.</description>
    <label>Trk matchtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>