force-app/main/default/objects/MessagingSession/fields/Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Id__c</fullName>
    <description>Passed from Gcorp Chat for who chatted in</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Passed from gusto.com chat for who chatted in</inlineHelpText>
    <label>Visitor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>