force-app/main/default/objects/MessagingSession/fields/Was_a_help_article_created__c.field-meta.xml
<CustomField>
    <fullName>Was_a_help_article_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was a help article created?</label>
    <type>Checkbox</type>
</CustomField>