force-app/main/default/objects/MessagingSession/recordTypes/Customer_Care.recordType-meta.xml
<RecordType>
    <fullName>Customer_Care</fullName>
    <active>true</active>
    <label>Customer Care</label>
</RecordType>